projet_gl/src/test/deca/context/invalid/2_07/2_07_2_DeclMethod.deca
// Description:
//    Problème de déclaration de méthode avec les différents signatures
//
// Resultats:
//    Ligne 11: Method is declared in superclass and has different signature from its superclass
// 
// Historique:
//    cree le 17/01/2024

class A {
    int fieldOne(int param1, boolean param2, boolean param3, float param4){}
}

class B extends A {
    int fieldOne(int param1, boolean param2, int param3, float param4){}
}